--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>hello corsera!</title>
 </head>
 <body>
-<h1>hello corsera its a great course!</h1>
+<h1>hello coursera!</h1>
 </body>
 </html>
